--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
+body{
+  font-family: sans-serif;
+}
+
 h1{
   text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 button{
@@ -20,4 +25,18 @@ button{
 section{
   display: block;
   text-align: center;
+}
+
+table{
+  margin-left: 5em;
+  border: 1px solid black;
+  border-radius: 2.5em;
+}
+
+th{
+  padding: 2em;
+}
+
+td{
+  padding: 0 2em 2em 2em;
 }
